# code-reproduction-agents

./: CLAUDE.md  README.md  pyproject.toml
assets/: TROUBLESHOOTING.md
docs/: agent-flow.md  controller.md  docker-execution.md  environment-engineering.md  reproduction-checklist.md
prompts/: README.md  basic-flow.md
src/cra_controller/: __init__.py  __main__.py  artifacts.py
templates/docker/: Dockerfile.repro
templates/docs/: draft.md  environment-engineering.md  human-questions.md  plan.md  run-contract.md
templates/scripts/: docker_build.sh  docker_exec.sh  docker_run.sh  evaluate.sh  launcher.sh  runtime_check.sh
